--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,7 +5,7 @@
 
 
 #main_nav_tab{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -13,7 +13,7 @@
 
 
 .logo_box {
-    border: 1px solid black;
+    /* border: 1px solid black; */
     width: 10%;
     display: flex;
     text-align: center;
@@ -27,7 +27,7 @@
 }
 
 .navbar_tabs{
-border: 1px soldi black;
+/* border: 1px soldi black; */
 justify-content: space-around;
 
 }
@@ -63,7 +63,7 @@ justify-content: space-around;
     font-weight: bold;
     border: none;
     outline: none;
-    color: rgb(11, 11, 11);
+    /* color: rgb(11, 11, 11); */
     padding: 24px 16px;
     background-color: white;
     /* font: inherit; */
@@ -97,23 +97,39 @@ justify-content: space-around;
 
   .column {
     float: left;
-    width: 15%;
+    width: 12%;
     padding: 10px 25px;
     background-color: rgb(255, 255, 255);
     /* height: 250px; */
     /* padding-left: 20px; */
   }
 
+  #column{
+    width: 8%;
+  }
+  #resource{
+    width: 22%;
+    /* padding: 2px 20px 10px 20px; */
+    margin-bottom: 25px;
+  }
+
+  #resource p{
+    margin-bottom: 35px;
+  }
   .column a {
     float: none;
-    color: black; 
+    /* color: #000ff0;  */
     padding: 16px;
     text-decoration: none;
     display: block;
     text-align: left;
+    font-weight: bold;
   }
 
-  .column a:hover {
+  .column a:not(:first-child):hover {
+    color: #000ff0;
+    font-weight: bolder;
+    margin-left: 3px;
     /* background-color: rgb(112, 23, 23);inner color hover */
   }
 
@@ -126,7 +142,7 @@ justify-content: space-around;
   }
 
   .action-btns{
-    border: 1px solid rgb(0, 189, 28);
+    /* border: 1px solid rgb(0, 189, 28); */
     display: flex;
     margin-right: 150px;
     justify-content: center;
@@ -135,7 +151,9 @@ justify-content: space-around;
   }
 
   .action-btns>button{
-    width: 100px;
+    /* width: 100px; */
+    margin: 0px 5px;
+    /* border:1px solid #000ff0; */
     font-weight: bold;
     
   }
@@ -143,6 +161,8 @@ justify-content: space-around;
   #language ,#login{
     background-color: transparent;
     border: none;
+    /* border:1px solid #000ff0; */
+
   }
 
   #demoBtn{
@@ -153,3 +173,63 @@ justify-content: space-around;
     padding: 5px 10px;
     height: 35px;
   }
+
+  .column>p>a{
+    color: blue;
+  }
+
+  .column a:not(:first-child){
+    color: #000ff0;
+    font-weight: bold;
+  }
+
+  #border_box{
+    /* border: 1px solid red; */
+    border-radius: 130px;
+    border-top-left-radius: 130px;
+    border-top-right-radius: 130px;
+    border-bottom-right-radius: 130px;
+    border-bottom-left-radius: 130px;
+
+    background: linear-gradient(180deg,rgba(91,1,180,.08) 0,rgba(255,255,255,0) 100%),#fff;
+    min-width: 700px;
+    transform: translateX(-20px) translateY(-140px) rotate(330deg);  
+    overflow: hidden;
+    overflow-x: hidden;
+    overflow-y: hidden;
+    position: relative;
+    min-width: 650px;
+    min-height: 350px;
+    box-sizing: border-box;
+
+    width: 40%;
+    height: 470px;
+    display: inline-block;
+    position: absolute;
+    right: -60px;
+    top: -10px;
+    /* bottom: -100px; */
+    content: "";
+    /* background: url(https://webstatic.chargebee.com/assets/web/543/images/home/coc/bg/testimonial-bg.svg) no-repeat; */
+    /* background-image: url(https://webstatic.chargebee.com/assets/web/543/images/home/coc/bg/testimonial-bg.svg); */
+    background-position-x: initial;
+    background-position-y: initial;
+    background-size: initial;
+    /* background-repeat-x: no-repeat; */
+    /* background-repeat-y: no-repeat; */
+    background-attachment: initial;
+    background-origin: initial;
+    background-clip: initial;
+    background-color: initial;
+    overflow: visible;
+    display: block;
+    transform: rotate(-30deg);
+    /* border-radius: 26% 19% 26% 26% / 25% 25% 38% 25%; */
+    /* width: 30%; */
+}
+
+#imageSvg{
+    background: url(https://webstatic.chargebee.com/assets/web/543/images/home/coc/bg/testimonial-bg.svg) no-repeat;
+    background-image: url(https://webstatic.chargebee.com/assets/web/543/images/home/coc/bg/testimonial-bg.svg);
+
+}
