--- a/styles/nav.css
+++ b/styles/nav.css
@@ -19,11 +19,11 @@
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin-left: 150px;
+    margin-left: 80px;
 }
 
 .logo_box img{
-    width: 60%;
+    width: 80%;
 }
 
 .navbar_tabs{
@@ -35,10 +35,10 @@ justify-content: space-around;
 .navbar {
     overflow: hidden;
     background-color: transparent;
-    font-family: Arial, Helvetica, sans-serif;
+    /* font-family: Arial, Helvetica, sans-serif; */
     /* border: 1px solid green; */
     /* display: ; */
-    margin-left: -550px;
+    margin-left: -350px;
   }
 
   .navbar a {
@@ -201,12 +201,12 @@ justify-content: space-around;
     min-width: 650px;
     min-height: 350px;
     box-sizing: border-box;
-
+    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
     width: 40%;
     height: 470px;
     display: inline-block;
     position: absolute;
-    right: -60px;
+    right: -20px;
     top: -10px;
     /* bottom: -100px; */
     content: "";
@@ -228,8 +228,92 @@ justify-content: space-around;
     /* width: 30%; */
 }
 
-#imageSvg{
-    background: url(https://webstatic.chargebee.com/assets/web/543/images/home/coc/bg/testimonial-bg.svg) no-repeat;
-    background-image: url(https://webstatic.chargebee.com/assets/web/543/images/home/coc/bg/testimonial-bg.svg);
+.main-headings{
+  /* border: 1px solid red; */
+  width: 100%;
+  height: 500px;
+  display: flex;
+  justify-content: space-around;
+}
+.main_heading_box{
+  /* border: 1px solid black; */
+  width: 40%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.heading_text{
+  /* border: 1px solid green; */
+  width: 80%;
+}
+.heading_text>div:nth-child(2){
+  width: 80%;
+  color: #8282a2;
+}
+.off_img_box{
+  /* border: 1px solid black; */
+  width: 70%;
+  position: relative;
+  top: 110px;
+  right: 10px;
+  left: 28px;
+  /* bottom: 50px; */
+  transform: translateX(-20px) translateY(-140px) rotate(330deg);  
+  border-radius: 130px;
+    border-top-left-radius: 130px;
+    border-top-right-radius: 130px;
+    border-bottom-right-radius: 130px;
+    border-bottom-left-radius: 130px;
 
+}
+
+.off_img_box>img{
+  
+  /* border: 1px solid black; */
+  position: relative;
+  top: 10px;
+  left: 0px;
+  right: 10px;
+  mask-image: inherit;
+  mask-border: initial;
+  width: 80%;
+  border-radius: 130px;
+    border-top-left-radius: 130px;
+    border-top-right-radius: 130px;
+    border-bottom-right-radius: 170px;
+    border-bottom-left-radius: 130px;
+  transform: translateX(20px) translateY(10px) rotate(30deg);  
+  mask-clip: content-box;
+  mask-border:unset;
+
+  
+}
+
+#first_head{
+  font-size: 35px;
+  font-weight: bold;
+  /* line-height: 1.5; */
+  /* background-color: #ff7846; */
+}
+
+#demo_btn{
+  border-radius: 20px;
+  font-size: 16px;
+  border: none;
+  height: 45px;
+  width: 130px;
+  padding: 10px 10px;
+  color: white;
+  background: rgb(91, 33, 126);
+background: linear-gradient(180deg, rgb(108, 48, 146) 0%, rgba(122,0,202,1) 37%);
+}
+
+#sign-up-btn{
+  border-radius: 20px;
+  /* border: none; */
+  font-size: 16px;
+margin-left: 15px;
+  height: 45px;
+  width: 150px;
+  padding: 10px 10px;
 }
