--- a/styles/index.css
+++ b/styles/index.css
@@ -216,7 +216,14 @@ margin-left: 15px;
 	}
 }
 
-
+.overlay-img-box{
+  /* border: 1px solid red; */
+  width: 100%;
+  margin-left: -50px;
+}
+.overlay-img-box>img{
+  width: 120%;
+}
 
 /* middle section */
 #middle-section {
@@ -313,6 +320,7 @@ box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 
 #middle_tab_section{
   /* border: 1px solid red; */
   /* height:600px; */
+  /* margin-bottom: 155px; */
 }
 
 #middle_nav_bar{
@@ -334,8 +342,11 @@ box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 
   /* border: 1px solid black; */
   /* height: 600px; */
   display: flex;
+  padding-top: 80px;
+  padding-bottom: 80px;
   justify-content:center ;
-  margin-top: 55px;
+  /* margin-top: 55px; */
+  /* margin-bottom: 100px; */
 }
 
 .middle_tab_content>div:nth-child(1){
@@ -397,21 +408,184 @@ padding-left: 20px;
   height: 400px;
 }
 
-#leader-banner>div{
-  border: 1px solid blue;
+.outer-box{
+  /* border: 1px solid blue; */
   width: 70%;
   display: flex;
-  margin:50px auto;
-  height: 300px;
+  margin:50px auto 50px 250px;
+  /* height: 500px; */
 }
-#leader-banner>div>img{
-  width: 25%;
-}
-#leader-banner>div>div{
-  border: 1px solid green;
-  height: 250px;
-  margin:30px -120px;
-  width: 80%;
-  border-radius: 20px;
 
+.rounded-box{
+  /* border: 1px solid green; */
+  /* height: 400px; */
+  margin:auto;
+  width: 80%;
+  padding: 35px 0px;
+  display: flex;
+  border-radius: 20px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+
+}
+
+.image-box{
+  /* border: 1px solid black; */
+  width: 22%;
+  /* height: 250px; */
+  display: flex;
+  /* margin: auto 0px 0px auto; */
+  margin-top: auto;
+  margin-bottom: auto;
+  margin-left: -95px;
+  margin-right:65px ;
+  justify-content: center;
+  align-items: center;
+}
+.image-box>img{
+  width: 90%;
+}
+.content-box{
+  /* border: 1px solid red; */
+  width: 65%;
+  /* height: 350px; */
+  margin: auto 0px;
+}
+.content-box>div>p{
+  font-size: 36px;
+  font-weight: 700;
+}
+
+.four-boxes{
+  display: grid;
+  /* width: 90%; */
+  grid-template-columns: repeat(4,1fr);
+  text-align: left;
+  gap: 15px;
+  /* padding: 25px; */
+  margin-top: -55px;
+}
+.four-boxes>div{
+  /* border: 1px solid violet; */
+  padding: 0px 25px 0px 0px;
+
+}
+
+.head-content-box-bottom{
+  /* border: 1px solid blue; */
+
+}
+
+.four-boxes>div>p:nth-child(1){
+  font-size: 32px;
+  font-weight: 600;
+}
+.four-boxes>div>p:nth-child(2){
+  font-size: 14px;
+  margin-top: -15px;
+}
+
+
+/* banner part */
+
+.banner{
+  width: 100%;
+  margin-top: 100px;
+  /* height: 400px; */
+  display: flex;
+justify-content: center;
+  background: rgb(60,35,152);
+background: linear-gradient(153deg, rgba(60,35,152,1) 46%, rgba(108,28,136,1) 82%);
+}
+.left-part-banner{
+  /* border: 1px solid white; */
+  width: 45%;
+}
+.demo-text{
+  color: white;
+  font-size: 44px;
+  font-weight: 700;
+  width:90%;
+}
+
+.right-part-banner{
+  /* border: 1px solid greenyellow; */
+  width: 30%;
+}
+
+#subscribe{
+  width: 100%;
+  height: 55px;
+  background-color: #1d0968;
+  border: none;
+  border-radius: 25px;
+  /* padding: 10px; */
+  
+}
+::placeholder{
+  color: #757575;
+  margin-left: 15px;
+  padding-left: 15px;
+  font-size: 18px;
+  font-weight: 500;
+}
+.subs-tag{
+  /* border: 1px solid wheat; */
+  border-radius: 25px;
+  width: 80%;
+  display: flex;
+  background-color: #1d0968;
+
+}
+
+.subs-tag>button{
+  background-color: #7f45ff;
+  border-radius: 25px;
+  width: 200px;
+  color: white;
+  font-weight: 500;
+  font-size:16px ;
+  cursor: pointer;
+}
+
+.right-part-content-box{
+  background-color: white;
+  width: 60%;
+  padding: 30px;
+  margin-top: -85px;
+  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+  border-radius: 15px;
+}
+
+.right-part-content-box{}
+
+.right-part-content-box img{
+  border-radius: 50%;
+  width: 80%;
+}
+
+.right-part-img-box{
+  /* border: 1px solid red; */
+  width: 40%;
+}
+
+.bottom-logos{
+  /* border: 1px solid whitesmoke; */
+  display: flex;
+  margin-left: -60px;
+  margin-top: 25px;
+}
+
+.bottom-logos>div>img{
+  width: 75%;
+}
+
+
+
+
+.right-part-banner>img{
+  width: 20%;
+  position: relative;
+  top: -55px;
+  margin-left: 190px;
+  margin-top: -250px;
 }
