product page last part

--- a/styles/nav.css
+++ b/styles/nav.css
@@ -5,7 +5,7 @@
 
 
 #main_nav_tab{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     display: flex;
     justify-content: space-between;
     width: 100%;
@@ -22,10 +22,11 @@
     justify-content: center;
     align-items: center;
     margin-left: 80px;
+    margin-right: 20px;
 }
 
 .logo_box img{
-    width: 80%;
+    width: 60%;
 }
 
 .navbar_tabs{
@@ -41,7 +42,7 @@ justify-content: space-around;
     overflow: hidden;
     background-color: transparent;
     /* font-family: Arial, Helvetica, sans-serif; */
-    border: 1px solid green;
+    /* border: 1px solid green; */
     /* display: ; */
     margin-left: -350px;
     /* background-color: #000ff0; */
@@ -69,7 +70,7 @@ justify-content: space-around;
 
 
   .dropdown .dropbtn {
-    /* background-color: transparent; */
+    background-color: transparent;
     /* background-color: #000ff0; */
 
     font-size: 15px;
@@ -78,7 +79,7 @@ justify-content: space-around;
     outline: none;
     /* color: rgb(11, 11, 11); */
     padding: 24px 16px;
-    background-color: white;
+    /* background-color: white; */
     /* font: inherit; */
     margin: 0;
     /* border: 1px solid red; */
@@ -96,8 +97,8 @@ justify-content: space-around;
     display: none;
     position: absolute;
     background-color: white;
-    width: 95%;
-    left: 5%;
+    width: 100%;
+    left: 0%;
     /* box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2); */
     z-index: 1;
   }
