--- a/styles/product.css
+++ b/styles/product.css
@@ -310,3 +310,215 @@ font-size: 16px;
     width: 100%;
     margin-top: 55px;
 }
+.logo-content-box{
+/* border: 1px solid black; */
+margin: 150px auto;
+width: 70%;
+/* height: 400px; */
+}
+
+.logo-box{
+/* border: 1px solid black; */
+text-align: center;
+
+}
+
+.logo-text{
+    /* border: 1px solid black; */
+    text-align: center;
+    margin-top: 15px;
+    font-size: 20px;
+
+}
+
+.logo-links{
+    /* border: 1px solid black; */
+    text-align: center;
+    margin-top: 10px;
+
+}
+
+.logo-links>a{
+ text-decoration: none;   
+ padding: 20px;
+ color: #000ff0;
+ font-weight: bold;
+}
+
+
+.FAQ-sec{
+    /* border: 1px solid black; */
+    /* height: 500px; */
+    display: flex;
+    justify-content: center;
+}
+.faq-head{
+    /* border: 1px solid black; */
+    font-size: 32px;
+    font-weight: 700;
+}
+
+.accoridan-box{
+    /* border: 1px solid black; */
+    width: 46%;
+    margin: auto;
+    padding-top: 50px;
+
+    /* height: 500px; */
+}
+
+.accordion {
+    background-color: #fff;
+    color: #444;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    border: none;
+    text-align: left;
+    outline: none;
+    font-size: 15px;
+    transition: 0.4s;
+    font-size: 18px;
+    font-weight: 500;
+
+  }
+  .accordion:active{
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+
+  }
+  .active, .accordion:hover {
+    background-color: #f4f7fc;
+  }
+  
+  .accordion:after {
+    content: '\25BC';
+    color: #fff(112, 12, 12);
+    font-weight: 700;
+    float: right;
+    margin-left: 5px;
+    font-size: 18px;
+    
+  }
+  
+  .active:after {
+    content: "\2212";
+    
+  }
+  
+  .panel {
+    padding: 0 18px;
+    background-color: white;
+    max-height: 0;
+    overflow: hidden;
+    transition: max-height 0.2s ease-out;
+    box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+  }
+
+
+
+
+  
+/* banner part */
+
+.banner{
+    width: 100%;
+    margin-top: 200px;
+    /* height: 400px; */
+    display: flex;
+  justify-content: center;
+    background: rgb(60,35,152);
+  background: linear-gradient(153deg, rgba(60,35,152,1) 46%, rgba(108,28,136,1) 82%);
+  }
+  .left-part-banner{
+    /* border: 1px solid white; */
+    width: 45%;
+  }
+  .demo-text{
+    color: white;
+    font-size: 44px;
+    font-weight: 700;
+    width:90%;
+  }
+  
+  .right-part-banner{
+    /* border: 1px solid greenyellow; */
+    width: 30%;
+  }
+  
+  #subscribe{
+    width: 100%;
+    height: 55px;
+    background-color: #1d0968;
+    border: none;
+    border-radius: 25px;
+    /* padding: 10px; */
+    
+  }
+  ::placeholder{
+    color: #757575;
+    margin-left: 15px;
+    padding-left: 15px;
+    font-size: 18px;
+    font-weight: 500;
+  }
+  .subs-tag{
+    /* border: 1px solid wheat; */
+    border-radius: 25px;
+    width: 80%;
+    display: flex;
+    background-color: #1d0968;
+  
+  }
+  
+  .subs-tag>button{
+    background-color: #7f45ff;
+    border-radius: 25px;
+    width: 200px;
+    color: white;
+    font-weight: 500;
+    font-size:16px ;
+    cursor: pointer;
+  }
+  
+  .right-part-content-box{
+    background-color: white;
+    width: 60%;
+    padding: 30px;
+    margin-top: -85px;
+    box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
+    border-radius: 15px;
+  }
+  
+  .right-part-content-box{}
+  
+  .right-part-content-box img{
+    border-radius: 50%;
+    width: 80%;
+  }
+  
+  .right-part-img-box{
+    /* border: 1px solid red; */
+    width: 40%;
+  }
+  
+  .bottom-logos{
+    /* border: 1px solid whitesmoke; */
+    display: flex;
+    margin-left: -60px;
+    margin-top: 25px;
+  }
+  
+  .bottom-logos>div>img{
+    width: 75%;
+  }
+  
+  
+  
+  
+  .right-part-banner>img{
+    width: 20%;
+    position: relative;
+    top: -55px;
+    margin-left: 190px;
+    margin-top: -250px;
+  }
