--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -273,6 +273,7 @@ body {
     padding-right: 30px;
     padding-top: 10px;
     padding-bottom: 10px;
+    width: 95%;
 }
 
 #sb_subs_1>div {
@@ -297,6 +298,7 @@ body {
     padding-top: 10px;
     padding-bottom: 10px;
     margin-top: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
 }
 
 #subs_input {
@@ -309,6 +311,91 @@ body {
     padding-left: 10px;
 }
 
+#sb_subs_2>div {
+    /* border: 2px solid red; */
+
+    margin: auto;
+}
+
+#sb_subs_2>div>select {
+    height: 30px;
+    margin-left: 10px;
+}
+
+.graph {
+    margin-top: 20px;
+    width: 98%;
+    border-radius: 10px;
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-auto-rows: auto;
+    gap: 10px;
+    padding: 10px 15px 10px 15px;
+}
+
+.graph>img {
+    width: 100%;
+    height: 100%;
+    border-radius: 10px;
+}
+
+#sb_subs_3 {
+   /* border: 2px solid red; */
+    background-color: white;
+    border-radius: 10px;
+    padding-left: 30px;
+    padding-right: 30px;
+    padding-top: 10px;
+    padding-bottom: 10px;
+    margin-top: 20px;
+    display: grid;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    
+}
+
+#sb_subs_3>div {
+    display: flex;
+    justify-content: space-between;
+    /* border: 2px solid black; */
+}
+
+#create_empty_user{
+    background-color: white;
+    border-radius: 10px;
+    margin-top: 20px;
+    box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 29px 0px;
+    /* padding-bottom: 10px; */
+}
+#create_empty_user>button{
+    margin-left: 90%;
+    border: 0;
+    background-color: #6200ea;
+    color: white;
+    padding: 5px 15px 5px 15px;
+    border-radius: 5px;
+    cursor: pointer;
+}
+#emp_user1{
+    display: grid;
+    grid-template-columns: repeat(2,150px);
+    grid-auto-rows: auto;
+}
+#emp_h4>h4{
+    margin-top: 40px;
+}
+#emp_input>button{
+    background-color: #6200ea;
+    border: 0;
+    color: white;
+    width: 100px;
+    height: 30px;
+    cursor: pointer;
+    margin-top: 10px;
+}
+#emp_input>input{
+    margin-top: 33px;
+    width: 500px;
+}
 @media all and (min-width:0px) and (max-width:1000px) {
     #sub-main-1 {
         display: block;
@@ -322,6 +409,21 @@ body {
     #imagery {
         width: 80%;
         height: 100%;
+    }
+
+    .graph {
+        grid-template-columns: repeat(1, 1fr);
+    }
+
+    #sb_subs_1 {
+        display: block;
+        height: 120px;
+        width: 90%;
+    }
+
+    #sb_subs_2 {
+        display: block;
+        height: 150px;
     }
 
 }
