--- a/styles/signup.css
+++ b/styles/signup.css
@@ -1,20 +1,139 @@
-
-
+* {
+  padding: 0px;
+  margin: 0px;
+  background-color: white;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
+  /* margin-top: 1px; */
+}
 .container {
-    width: 100%;
-  }
-  .swiper {
-    width: 100%;
-    height: fit-content;
-  }
-  .swiper-slide img {
-    width: 100%;
-  }
-  .swiper{
-    color: rgb(104, 95, 95);
-  }
-  .swiper .swiper-pagination-bullet-active {
-    /* margin-top: 200px; */
-    border-radius: 0px;
-    background:  #ff7846;
-  }
+  width: 100%;
+}
+.swiper {
+  width: 100%;
+  height: fit-content;
+}
+.swiper-slide img {
+  width: 100%;
+}
+.swiper {
+  color: rgb(104, 95, 95);
+}
+.swiper .swiper-pagination-bullet-active {
+  /* margin-top: 200px; */
+  border-radius: 0px;
+  background: #ff7846;
+}
+#sign_head > div + div > a {
+  margin-top: 20px;
+  text-decoration: none;
+}
+#signslideshow {
+  height: auto;
+  width: auto;
+  display: flex;
+  gap: 20px;
+}
+#signslideshow > div {
+  height: 580px;
+  width: 425px;
+  /* border: 1px solid black; */
+}
+#signslideshow > div + div {
+  /* border: 1px solid red; */
+  width: 920px;
+}
+
+td:first-child {
+  width: 10px;
+}
+#sign_head {
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+  justify-items: center;
+  /* border: 1px solid black; */
+  gap: 300px;
+  margin-bottom: 40px;
+}
+#sign_head > div > img {
+  height: 40px;
+}
+#styleTextArea {
+  color: #00000a;
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 32px;
+  background: #fff;
+  padding: 0 12px;
+  margin-top: -8px;
+}
+/* -------------------- */
+#info-block section {
+  height: 300px;
+  width: 80%;
+  margin-top: 40px;
+  margin: auto;
+  border: 2px solid black;
+}
+
+.file-marker > div {
+  padding: 0 3px;
+  height: 100px;
+  margin-top: -0.8rem;
+}
+.box-title {
+  background: white none repeat scroll 0 0;
+  display: inline-block;
+  padding: 0 2px;
+  margin-left: 8em;
+}
+input[type="text"],
+select {
+  width: 90%;
+  min-width: 42px;
+  height: 46px;
+  font-weight: 600;
+  line-height: 36px;
+  font-size: 16px;
+  border: 1px solid #cdcdcd;
+  border-radius: 4px;
+  background-color: #ffffff;
+  transition: border-color ease-in-out 0.15s;
+  color: #202022;
+  padding: 0 16px;
+}
+
+input[type="submit"] {
+  width: 30%;
+  background-color: #4caf50;
+  color: white;
+  padding: 14px 20px;
+  margin: 8px 0;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+}
+
+input[type="submit"]:hover {
+  background-color: #45a049;
+}
+#div {
+  height: 400px;
+  width: 70%;
+  margin: auto;
+  border-radius: 5px;
+  background-color: #f2f2f2;
+  padding: 20px;
+}
+#companyNmae {
+  color: #727272;
+  font-size: 16px;
+  font-weight: 600;
+  line-height: 20px;
+  margin-bottom: 12px;
+}
+#bottomImagesign {
+  margin-left: 42%;
+}
