--- a/styles/signup.css
+++ b/styles/signup.css
@@ -7,28 +7,6 @@
     "Segoe UI Symbol";
   /* margin-top: 1px; */
 }
-.container {
-  width: 100%;
-}
-.swiper {
-  width: 100%;
-  height: fit-content;
-}
-.swiper-slide img {
-  width: 100%;
-}
-.swiper {
-  color: rgb(104, 95, 95);
-}
-.swiper .swiper-pagination-bullet-active {
-  /* margin-top: 200px; */
-  border-radius: 0px;
-  background: #ff7846;
-}
-#sign_head > div + div > a {
-  margin-top: 20px;
-  text-decoration: none;
-}
 #signslideshow {
   height: auto;
   width: auto;
@@ -55,9 +33,9 @@ td:first-child {
   justify-items: center;
   /* border: 1px solid black; */
   gap: 300px;
-  margin-bottom: 40px;
+  margin-bottom: 30px;
 }
-#sign_head > div > a> img {
+#sign_head > div >a> img {
   height: 40px;
 }
 #styleTextArea {
@@ -69,26 +47,7 @@ td:first-child {
   padding: 0 12px;
   margin-top: -8px;
 }
-/* -------------------- */
-#info-block section {
-  height: 300px;
-  width: 80%;
-  margin-top: 40px;
-  margin: auto;
-  border: 2px solid black;
-}
 
-.file-marker > div {
-  padding: 0 3px;
-  height: 100px;
-  margin-top: -0.8rem;
-}
-.box-title {
-  background: white none repeat scroll 0 0;
-  display: inline-block;
-  padding: 0 2px;
-  margin-left: 8em;
-}
 input[type="text"],
 select {
   width: 90%;
@@ -103,6 +62,7 @@ select {
   transition: border-color ease-in-out 0.15s;
   color: #202022;
   padding: 0 16px;
+  margin-bottom: 20px;
 }
 
 input[type="submit"] {
@@ -114,18 +74,19 @@ input[type="submit"] {
   border: none;
   border-radius: 4px;
   cursor: pointer;
+  filter: grayscale(100%);
+  opacity: 0.5;
 }
 
 input[type="submit"]:hover {
-  background-color: #45a049;
+  background-color: blueviolet;
 }
 #div {
   height: 400px;
-  width: 70%;
+  width: 80%;
   margin: auto;
   border-radius: 5px;
-  background-color: #f2f2f2;
-  padding: 20px;
+  padding: 40px;
 }
 #companyNmae {
   color: #727272;
@@ -135,5 +96,71 @@ input[type="submit"]:hover {
   margin-bottom: 12px;
 }
 #bottomImagesign {
-  margin-left: 42%;
+  margin-top: 20px;
+  margin-left: 45%;
+}
+#borderstyle {
+  width: 100px;
+  height: 580px;
+  width: 70%;
+  margin: auto;
+  border: 1px solid #cdcdcd;
+  border-radius: 1.5%;
+}
+#borderstyletetx {
+  width: 300px;
+  margin-top: -17px;
+  background: white;
+  color: #00000a;
+  font-family: basis-grotesque, -apple-system, BlinkMacSystemFont, "Segoe UI",
+    Roboto, "Helvetica Neue", Arial, sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol";
+  font-size: 18px;
+  font-weight: bold;
+  line-height: 32px;
+  background: #fff;
+  padding: 0 12px;
+  margin-left: 10%;
+}
+#styelOfocheckbox {
+  width: 500px;
+  padding: 0;
+  margin: auto;
+}
+#para1signa {
+  margin-top: 10px;
+  font-size: 15px;
+  color: #7f7f7f;
+}
+#spancolor {
+  color: black;
+}
+#para1signa2 {
+  font-size: 13px;
+  color: #7f7f7f;
+}
+
+.container {
+  width: 100%;
+}
+.swiper {
+  width: 100%;
+  height: fit-content;
+}
+.swiper-slide img {
+  width: 100%;
+}
+.swiper {
+  color: rgb(104, 95, 95);
+}
+.swiper .swiper-pagination-bullet-active {
+  /* margin-top: 200px; */
+  border-radius: 0px;
+  background: #ff7846;
+}
+
+/* ------------------------------------------------------------ */
+#sign_head > div + div > a {
+  margin-top: 20px;
+  text-decoration: none;
 }
