--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -1,4 +1,6 @@
-
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
 
 
 body {
@@ -48,7 +50,7 @@ body {
 
 #logo {
     height: 70px;
-    margin-top: 15px;
+    margin-top: 25px;
  margin-left: 5px;
 }
 
@@ -57,7 +59,6 @@ body {
     margin-left: 15px;
     width: 150px;
     color: white;
-
 }
 
 #email,
@@ -72,6 +73,7 @@ body {
     border: 0;
     margin-bottom: 5px;
     cursor: pointer;
+    border-radius: 5px;
 }
 
 #search {
@@ -85,6 +87,7 @@ body {
     height: 40px;
     border: 1px solid rgb(176, 176, 176);
     padding-left: 10px;
+    padding-right: 11px;
 }
 
 #side-bar-tools {
@@ -131,6 +134,9 @@ body {
     font-size: 13px;
     margin-bottom: 10px;
     padding-left: 10px;
+    font-size: 14px;
+    font-weight: 500;
+    color: grey;
 }
 
 #invoice_button,
@@ -154,6 +160,8 @@ body {
 #rev_empty>li,
 #set_empty>li {
     margin-left: 20px;
+    color: rgb(102, 102, 102);
+    font-size: 13px;
 }
 
 #invoice_empty,
@@ -229,6 +237,10 @@ body {
     margin-top: 10px;
 }
 
+#sub-main-1>div>p{
+    color: rgb(62, 62, 62);
+    font-size: 15px;
+}
 #sub-main-2 {
     display: flex;
     margin-top: 20px;
@@ -270,12 +282,14 @@ body {
 #buttons_home>button {
 
     margin-top: 20px;
-    color: grey;
+   
     margin-left: -10px;
+    
 }
 
 #buttons_home {
     margin-left: 10px;
+    /* border: 2px solid red; */    
 }
 
 #daily {
@@ -452,18 +466,28 @@ body {
     height: 30px;
     cursor: pointer;
     margin-top: 10px;
+    border-radius: 5px;
+    margin-bottom: 10px;
 }
 
 #emp_input>input {
-    margin-top: 33px;
+    margin-top: 30px;
     width: 500px;
     padding-left: 20px;
     border-radius: 5px;
+    padding-top: 5px;
+    padding-bottom: 5px;
+    padding-right: 20px;
    
 }
 
 #emp_input>select {
-    padding-left: 20px;
+    height:30px;
+    margin-top:38px;
+    width: 540px;
+   
+    border-radius: 5px;
+     /* height: 90px; */
 }
 
 .get_start_div {
@@ -497,7 +521,7 @@ body {
 }
 
 .checklist>button {
-    margin-top: 15px;
+    margin-top: 0;
     margin-left: 5%;
     font-size: 25px;
     border: 0;
@@ -518,7 +542,7 @@ body {
     margin-right: 3%;
 }
 
-.checklist>h3 {
+.checklist>p {
     margin-left: 20px;
 }
 
@@ -593,7 +617,12 @@ body {
     width: 100px;
     cursor: pointer;
     color: white;
-    margin-top: 30px;
+    margin-top: 20px;
+    margin-left: 10px;
+}
+
+#cus_info>p,#subs_info>p,#next_ren>p,#mrp>p,#createon>p,#uid>p{
+    font-size: 15px;
 }
 
 @media all and (min-width:0px) and (max-width:1000px) {
