--- a/styles/demo.css
+++ b/styles/demo.css
@@ -1,8 +1,12 @@
+*{
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
 #chargebee_logo{
     background-color:#5400b1 ;
 }
 #chargebee_logo>img{
-    margin-top: 100px;
+    margin-top: 50px;
     width: 10%;
     margin-bottom: 0px;
     margin-left: 74%;
@@ -11,28 +15,32 @@
 }
 
 #container{
-    height: 700px;
+    height: 500px;
     width: 100%;
     border: 1px solid transparent;
     display: flex;
     margin: auto;
-    background-color: #5400b1
+    background-color: #5400b1;
+    margin-bottom: 150px;
 }
 
 #container>div:nth-child(1){
-    height: 400px;
-    width: 30%;
+    height: 70%;
+    width: 40%;
     margin-top:2%;
-    border: 2px solid transparent;
+    /* border: 2px solid red; */
     margin-left: 12%;
 }
 #container>div:nth-child(2){
-    height: 680px;
+    height: 750px;
     width: 32%;
     margin-top:2%;
-    border: 2px solid transparent;
-    margin-left: 11%;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    margin-left: 9%;
     background-color: white;
+    border-radius: 10px;
+    margin-bottom: 30px;
+    padding: 10px 20px 10px 20px;
 }
 #heading_container>h1{
     font-size: 50px;
@@ -45,13 +53,17 @@
     margin-top: -20px;
     margin-left: 0px;
 }
+
+#form{
+    padding-top: 20px;
+}
 #form> input{
   height: 45px;
-  width: 300px;
-  font-size: 20px;
-  border-radius: 15px;
+  width: 80%;
+  font-size: 15px;
+  padding-left: 10px;
+  border-radius: 5px;
   margin: 15px 50px 8px 50px;
-  text-align: center;
   border: 1px solid gray;
  
 }
@@ -71,12 +83,15 @@
     background-color: #5400b1;
     color: white;
     height: 40px;
-    font-size: 20px;
+    font-size: 15px;
     margin-left: 50px;
+    border: 0;
+    border-radius: 5px;
+    padding: 5px 10px 5px 10px;
 }
 form>p{
-    margin-left: 50px;
-    margin-top: 20px;
+    margin-left: 53px;
+    margin-top: 10px;
 }
 #chargebee_description{
     height: auto;
@@ -92,7 +107,6 @@ form>p{
 
 #image_section{
     height: 80%;
-   
 }
 #image_section>img{
     width: 300px;
@@ -111,9 +125,15 @@ form>p{
 }
 #logo-section{
     display: flex;
-    margin-top: 50px;
+    margin-top: 400px
 }
 
 #logo-section>img{
     width: 40%;
+
+}
+
+#fade{
+    color: grey;
+    font-size: 13px;
 }
