--- a/styles/index.css
+++ b/styles/index.css
@@ -1,44 +1,47 @@
+#border_box {
+  /* border: 1px solid red; */
+  border-radius: 130px;
+  border-top-left-radius: 130px;
+  border-top-right-radius: 130px;
+  border-bottom-right-radius: 130px;
+  border-bottom-left-radius: 130px;
 
-
-#border_box{
-    /* border: 1px solid red; */
-    border-radius: 130px;
-    border-top-left-radius: 130px;
-    border-top-right-radius: 130px;
-    border-bottom-right-radius: 130px;
-    border-bottom-left-radius: 130px;
-
-    background: linear-gradient(180deg,rgba(91,1,180,.08) 0,rgba(255,255,255,0) 100%),#fff;
-    min-width: 700px;
-    transform: translateX(-20px) translateY(-140px) rotate(330deg);  
-    overflow: hidden;
-    overflow-x: hidden;
-    overflow-y: hidden;
-    position: relative;
-    min-width: 650px;
-    min-height: 350px;
-    box-sizing: border-box;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
-    width: 40%;
-    height: 470px;
-    display: inline-block;
-    position: absolute;
-    right: 80px;
-    top: -10px;
-    content: "";
-    background-position-x: initial;
-    background-position-y: initial;
-    background-size: initial;
-    background-attachment: initial;
-    background-origin: initial;
-    background-clip: initial;
-    background-color: initial;
-    overflow: visible;
-    display: block;
-    transform: rotate(-30deg);
+  background: linear-gradient(
+      180deg,
+      rgba(91, 1, 180, 0.08) 0,
+      rgba(255, 255, 255, 0) 100%
+    ),
+    #fff;
+  min-width: 700px;
+  transform: translateX(-20px) translateY(-140px) rotate(330deg);
+  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: hidden;
+  position: relative;
+  min-width: 650px;
+  min-height: 350px;
+  box-sizing: border-box;
+  box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+  width: 40%;
+  height: 470px;
+  display: inline-block;
+  position: absolute;
+  right: 80px;
+  top: -10px;
+  content: "";
+  background-position-x: initial;
+  background-position-y: initial;
+  background-size: initial;
+  background-attachment: initial;
+  background-origin: initial;
+  background-clip: initial;
+  background-color: initial;
+  overflow: visible;
+  display: block;
+  transform: rotate(-30deg);
 }
 
-.main-headings{
+.main-headings {
   /* border: 1px solid red; */
   width: 100%;
   margin-bottom: 4%;
@@ -46,68 +49,55 @@
   display: flex;
   justify-content: space-around;
 }
-.main_heading_box{
+.main_heading_box {
   /* border: 1px solid black; */
   width: 40%;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.heading_text{
+.heading_text {
   /* border: 1px solid green; */
   width: 80%;
 }
-.heading_text>div:nth-child(2){
+.heading_text > div:nth-child(2) {
   width: 80%;
   color: #8282a2;
 }
-.off_img_box{
+.off_img_box {
   /* border: 1px solid black; */
   width: 70%;
   position: relative;
-  top: 110px;
-  right: 50px;
-  left: -85px;
+  top: 100px;
+  right: 0px;
+  left: -5px;
   /* bottom: 50px; */
-  transform: translateX(-20px) translateY(-140px) rotate(330deg);  
+  transform: translateX(-20px) translateY(-140px) rotate(330deg);
   border-radius: 130px;
-    border-top-left-radius: 130px;
-    border-top-right-radius: 130px;
-    border-bottom-right-radius: 130px;
-    border-bottom-left-radius: 130px;
-
+  border-top-left-radius: 130px;
+  border-top-right-radius: 130px;
+  border-bottom-right-radius: 130px;
+  border-bottom-left-radius: 130px;
 }
 
-.off_img_box>img{
-  
+.off_img_box > img {
   /* border: 1px solid black; */
-  position: relative;
-  top: 10px;
-  left: 0px;
-  right: 10px;
+  margin-top: -80px;
+  margin-left: -190px;
   mask-image: inherit;
   mask-border: initial;
-  width: 80%;
-  border-radius: 130px;
-    border-top-left-radius: 130px;
-    border-top-right-radius: 130px;
-    border-bottom-right-radius: 170px;
-    border-bottom-left-radius: 130px;
-  transform: translateX(20px) translateY(10px) rotate(30deg);  
+  width: 110%;
+  transform: translateX(20px) translateY(10px) rotate(30deg);
   mask-clip: content-box;
-  mask-border:unset;
-
-  
+  mask-border: unset;
 }
 
-#first_head{
+#first_head {
   font-size: 35px;
   font-weight: bold;
-  /* line-height: 1.5; */
-  /* background-color: #ff7846; */
 }
 
-#demo_btn{
+#demo_btn {
   border-radius: 20px;
   font-size: 16px;
   border: none;
@@ -117,115 +107,110 @@
   padding: 10px 15px;
   color: white;
   background: rgb(91, 33, 126);
-background: linear-gradient(180deg, rgb(108, 48, 146) 0%, rgba(122,0,202,1) 37%);
+  background: linear-gradient(
+    180deg,
+    rgb(108, 48, 146) 0%,
+    rgba(122, 0, 202, 1) 37%
+  );
 }
 
-#sign-up-btn{
+#sign-up-btn {
   border-radius: 20px;
   /* border: none; */
   font-size: 16px;
- margin-left: 15px;
+  margin-left: 15px;
   height: 45px;
   font-weight: 500;
   /* width: 150px; */
   padding: 10px 15px;
 }
 
-
-
 /* logos scroller */
-#logo_scroll{
-    display: flex;
-    width: 50%;
-    justify-content: center;
-    
+#logo_scroll {
+  display: flex;
+  width: 50%;
+  justify-content: center;
 }
 .marquee-full-width {
-    /* border: 1px solid red; */
-    /* margin: auto; */
-	width: 90%;
-	position: relative;
-    display: flex;
-    justify-content: center;
-	left: 50%;
-	right: 50%;
-	 /* margin-left: -50vw;
-	margin-right: -50vw; */
+  /* border: 1px solid red; */
+
+  width: 90%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  left: 50%;
+  right: 50%;
 }
 .marquee-box {
-    display: flex;
-    justify-content: center;
-	overflow-x: hidden !important;
-	display: flex !important;
-	flex-direction: row !important;
-	position: relative;
-	width: 100%;
+  display: flex;
+  justify-content: center;
+  overflow-x: hidden !important;
+  display: flex !important;
+  flex-direction: row !important;
+  position: relative;
+  width: 100%;
 }
 .marquee {
-	flex: 0 0 auto;
-	min-width: 50%;
-	z-index: 1;
-	display: flex;
-	flex-direction: row;
-	align-items: center;
-	animation: marqueescroll 20s linear 2s infinite;
-	animation-play-state: running;
-	animation-delay: 0s;
-	animation-direction: normal;
+  flex: 0 0 auto;
+  min-width: 50%;
+  z-index: 1;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  animation: marqueescroll 20s linear 2s infinite;
+  animation-play-state: running;
+  animation-delay: 0s;
+  animation-direction: normal;
 }
-.marquee figure
-{
-	margin-right: 1rem;
-	margin-left: 1rem;
-	padding: 5px;
-	max-width: 250px;	
-	text-align: center;
-	vertical-align: top;
+.marquee figure {
+  margin-right: 1rem;
+  margin-left: 1rem;
+  padding: 5px;
+  max-width: 250px;
+  text-align: center;
+  vertical-align: top;
 }
-.marquee figcaption
-{
-	display:none;
-	font-weight: 80%;
-	color: #333;
-	line-height: 1.2;
+.marquee figcaption {
+  display: none;
+  font-weight: 80%;
+  color: #333;
+  line-height: 1.2;
 }
-.marquee img
-{
-	/* margin: 0 0; */
-	height: auto;
-	max-height: 3.5rem;
-	max-width: 50%;
-	background: #fdfdfd;
-	border: none;
+.marquee img {
+  /* margin: 0 0; */
+  height: auto;
+  max-height: 3.5rem;
+  max-width: 50%;
+  background: #fdfdfd;
+  border: none;
 }
 .marquee-box:hover div {
-	animation-play-state: running;
+  animation-play-state: running;
 }
 .marquee-box:active div {
-	animation-play-state: running;
+  animation-play-state: running;
 }
 @keyframes marqueescroll {
-	0% {
-		transform: translateX(0%);
-	}
-	100% {
-		transform: translateX(-100%);
-	}
+  0% {
+    transform: translateX(0%);
+  }
+  100% {
+    transform: translateX(-100%);
+  }
 }
 
-.overlay-img-box{
+.overlay-img-box {
   /* border: 1px solid red; */
   width: 100%;
   margin-left: -50px;
 }
-.overlay-img-box>img{
+.overlay-img-box > img {
   width: 120%;
 }
 
 /* middle section */
 #middle-section {
   /* border: 1px solid red; */
-  /* height: 600px; */
   display: flex;
   margin-top: 5%;
 }
@@ -242,52 +227,51 @@ background: linear-gradient(180deg, rgb(108, 48, 146) 0%, rgba(122,0,202,1) 37%)
   margin-left: 10%;
 }
 
-.left-middle-section-first-box>p{
+.left-middle-section-first-box > p {
   font-size: 32px;
   font-weight: bold;
 }
-.left-middle-section-second-box>p{
+.left-middle-section-second-box > p {
   font-size: 16px;
 }
 
-.right-middle-section{
+.right-middle-section {
   display: grid;
-  grid-template-columns: repeat(2,1fr);
+  grid-template-columns: repeat(2, 1fr);
   gap: 30px;
 }
 
-.right-middle-section>div{
+.right-middle-section > div {
   /* border: 1px solid red; */
   display: grid;
-  grid-template-columns: repeat(1,1fr);
+  grid-template-columns: repeat(1, 1fr);
 }
-.right-middle-section>div{
+.right-middle-section > div {
   /* border:1px solid red; */
   padding: 25px 25px;
   box-shadow: rgba(0, 0, 0, 0.1) -4px 9px 25px -6px;
-  transition: transform .2s;
+  transition: transform 0.2s;
   cursor: pointer;
 }
 
-.right-middle-section>div:hover{
-transform: scale(1.01);
-box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 32px;
-
+.right-middle-section > div:hover {
+  transform: scale(1.01);
+  box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px,
+    rgba(17, 17, 26, 0.05) 0px 8px 32px;
 }
 
-.right-middle-section>div>img+p{
+.right-middle-section > div > img + p {
   font-weight: bold;
 }
 
-.right-middle-section>div a{
+.right-middle-section > div a {
   text-decoration: none;
   font-weight: bold;
   color: #000ff0;
   text-align: right;
-
 }
 
-#streamline-section{
+#streamline-section {
   /* border: 1px solid rebeccapurple; */
   text-align: center;
   display: flex;
@@ -295,32 +279,32 @@ box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 
   margin: 4% 0px 4% 0px;
   flex-direction: column;
 }
-#streamline-section>div{
+#streamline-section > div {
   /* border: 1px solid black; */
   width: 40%;
   margin: auto;
 }
-#streamline-section>div:nth-child(2){
+#streamline-section > div:nth-child(2) {
   width: 32%;
 }
 
-#streamline-section>div>p:first-child{
+#streamline-section > div > p:first-child {
   font-size: 36px;
   font-weight: 700;
 }
-#streamline-section>div:nth-child(2)>p{
+#streamline-section > div:nth-child(2) > p {
   font-size: 16px;
   font-weight: normal;
   margin-top: -25px;
 }
 
-#middle_tab_section{
+#middle_tab_section {
   /* border: 1px solid red; */
   /* height:600px; */
   /* margin-bottom: 155px; */
 }
 
-#middle_nav_bar{
+#middle_nav_bar {
   /* border: 1px solid black; */
   height: 50px;
   width: 80%;
@@ -330,49 +314,49 @@ box-shadow: rgba(17, 17, 26, 0.05) 0px 4px 16px, rgba(17, 17, 26, 0.05) 0px 8px 
   align-items: center;
 }
 
-#middle_nav_bar>a{
+#middle_nav_bar > a {
+  color: #000ff0;
   text-decoration: none;
   margin: 0px 20px;
 }
 
-.middle_tab_content{
+.middle_tab_content {
   /* border: 1px solid black; */
   /* height: 600px; */
   display: flex;
   padding-top: 80px;
   padding-bottom: 80px;
-  justify-content:center ;
+  justify-content: center;
   /* margin-top: 55px; */
   /* margin-bottom: 100px; */
 }
 
-.middle_tab_content>div:nth-child(1){
-width: 25%;
-/* border: 1px solid blue; */
-padding-left: 20px;
+.middle_tab_content > div:nth-child(1) {
+  width: 25%;
+  /* border: 1px solid blue; */
+  padding-left: 20px;
 }
 
-
-.main_box{
+.main_box {
   width: 70%;
   /* border: 1px solid red; */
 }
-.head-box{
-  font-size:22px ;
+.head-box {
+  font-size: 22px;
   font-weight: 700;
 }
 
-.desc-box{
+.desc-box {
   font-size: 16px;
 }
-.bullet-box>div{
+.bullet-box > div {
   /* border: 1px solid green; */
   display: flex;
   align-items: center;
   height: fit-content;
   margin-bottom: -15px;
 }
-.bullet-box>div>div{
+.bullet-box > div > div {
   /* border: 1px solid black; */
   width: 5%;
   height: fit-content;
@@ -382,50 +366,49 @@ padding-left: 20px;
   margin-right: 5px;
 }
 
-.bullet-box>div>div>img{
+.bullet-box > div > div > img {
   width: 100%;
 }
-.link-box{
+.link-box {
   margin-top: 18px;
   text-decoration: none;
 }
-.link-box>a{
+.link-box > a {
   text-decoration: none;
   color: #000ff0;
   font-weight: 600;
 }
 
-.middle_tab_content>div:nth-child(2){
+.middle_tab_content > div:nth-child(2) {
   width: 35%;
   /* border: 1px solid blue; */
 }
 
-#leader-banner{
+#leader-banner {
   /* border: 1px solid red; */
   height: 400px;
 }
 
-.outer-box{
+.outer-box {
   /* border: 1px solid blue; */
   width: 70%;
   display: flex;
-  margin:50px auto 50px 250px;
+  margin: 50px auto 50px 250px;
   /* height: 500px; */
 }
 
-.rounded-box{
+.rounded-box {
   /* border: 1px solid green; */
   /* height: 400px; */
-  margin:auto;
+  margin: auto;
   width: 80%;
   padding: 35px 0px;
   display: flex;
   border-radius: 20px;
   box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-
 }
 
-.image-box{
+.image-box {
   /* border: 1px solid black; */
   width: 22%;
   /* height: 250px; */
@@ -434,155 +417,50 @@ padding-left: 20px;
   margin-top: auto;
   margin-bottom: auto;
   margin-left: -95px;
-  margin-right:65px ;
+  margin-right: 65px;
   justify-content: center;
   align-items: center;
 }
-.image-box>img{
+.image-box > img {
   width: 90%;
 }
-.content-box{
+.content-box {
   /* border: 1px solid red; */
   width: 65%;
   /* height: 350px; */
   margin: auto 0px;
 }
-.content-box>div>p{
+.content-box > div > p {
   font-size: 36px;
   font-weight: 700;
 }
 
-.four-boxes{
+.four-boxes {
   display: grid;
   /* width: 90%; */
-  grid-template-columns: repeat(4,1fr);
+  grid-template-columns: repeat(4, 1fr);
   text-align: left;
   gap: 15px;
   /* padding: 25px; */
   margin-top: -55px;
 }
-.four-boxes>div{
+.four-boxes > div {
   /* border: 1px solid violet; */
   padding: 0px 25px 0px 0px;
-
 }
 
-.head-content-box-bottom{
+.head-content-box-bottom {
   /* border: 1px solid blue; */
-
 }
 
-.four-boxes>div>p:nth-child(1){
+.four-boxes > div > p:nth-child(1) {
   font-size: 32px;
   font-weight: 600;
 }
-.four-boxes>div>p:nth-child(2){
+.four-boxes > div > p:nth-child(2) {
   font-size: 14px;
   margin-top: -15px;
 }
 
-
 /* banner part */
 
-.banner{
-  width: 100%;
-  margin-top: 100px;
-  /* height: 400px; */
-  display: flex;
-justify-content: center;
-  background: rgb(60,35,152);
-background: linear-gradient(153deg, rgba(60,35,152,1) 46%, rgba(108,28,136,1) 82%);
-}
-.left-part-banner{
-  /* border: 1px solid white; */
-  width: 45%;
-}
-.demo-text{
-  color: white;
-  font-size: 44px;
-  font-weight: 700;
-  width:90%;
-}
-
-.right-part-banner{
-  /* border: 1px solid greenyellow; */
-  width: 30%;
-}
-
-#subscribe{
-  width: 100%;
-  height: 55px;
-  background-color: #1d0968;
-  border: none;
-  border-radius: 25px;
-  /* padding: 10px; */
-  
-}
-::placeholder{
-  color: #757575;
-  margin-left: 15px;
-  padding-left: 15px;
-  font-size: 18px;
-  font-weight: 500;
-}
-.subs-tag{
-  /* border: 1px solid wheat; */
-  border-radius: 25px;
-  width: 80%;
-  display: flex;
-  background-color: #1d0968;
-
-}
-
-.subs-tag>button{
-  background-color: #7f45ff;
-  border-radius: 25px;
-  width: 200px;
-  color: white;
-  font-weight: 500;
-  font-size:16px ;
-  cursor: pointer;
-}
-
-.right-part-content-box{
-  background-color: white;
-  width: 60%;
-  padding: 30px;
-  margin-top: -85px;
-  box-shadow: rgba(99, 99, 99, 0.2) 0px 2px 8px 0px;
-  border-radius: 15px;
-}
-
-.right-part-content-box{}
-
-.right-part-content-box img{
-  border-radius: 50%;
-  width: 80%;
-}
-
-.right-part-img-box{
-  /* border: 1px solid red; */
-  width: 40%;
-}
-
-.bottom-logos{
-  /* border: 1px solid whitesmoke; */
-  display: flex;
-  margin-left: -60px;
-  margin-top: 25px;
-}
-
-.bottom-logos>div>img{
-  width: 75%;
-}
-
-
-
-
-.right-part-banner>img{
-  width: 20%;
-  position: relative;
-  top: -55px;
-  margin-left: 190px;
-  margin-top: -250px;
-}
