--- a/styles/pricing.css
+++ b/styles/pricing.css
@@ -1,6 +1,6 @@
 /* nav bar modifications */
 #back-box{
-    border: 1px solid red;
+    /* border: 1px solid red; */
     height: 80vh;
     /* background: rgb(67,0,163);
 background: linear-gradient(107deg, rgba(67,0,163,1) 0%, rgba(130,0,213,1) 87%); */
